--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.py linguist-language=python
 *.ipynb linguist-documentation
-*.ipynb linguist-detectable=false
+# *.ipynb linguist-detectable=false
